--- a/public/css/app.css
+++ b/public/css/app.css
@@ -524,12 +524,19 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .alert-container {
   position: fixed;
-  top: 0px;
   right: 0px;
+  padding: 1.25rem;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  display: flex;
   height: 100%;
   width: 100%;
-  background-color: transparent;
-  padding: 1.25rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+        background: rgba(0,0,0,.70);
+        z-index: 999999999;
 }
 .alert {
   margin: 0.5rem;
@@ -591,6 +598,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
 }
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -629,6 +640,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-4 {
   margin-bottom: 1rem;
+}
+.mt-1 {
+  margin-top: 0.25rem;
 }
 .mb-2\.5 {
   margin-bottom: 0.625rem;
@@ -782,16 +796,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 .bg-transparent {
   background-color: transparent;
-}
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 .object-cover {
   -o-object-fit: cover;
@@ -848,12 +862,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
 .pt-8 {
   padding-top: 2rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
+.pt-20 {
+  padding-top: 5rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -867,20 +895,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pt-4 {
   padding-top: 1rem;
 }
-.pb-8 {
-  padding-bottom: 2rem;
+.pl-2\.5 {
+  padding-left: 0.625rem;
 }
-.pt-16 {
-  padding-top: 4rem;
-}
-.pt-20 {
-  padding-top: 5rem;
+.pl-2 {
+  padding-left: 0.5rem;
 }
 .text-left {
   text-align: left;
 }
 .text-center {
   text-align: center;
+}
+.text-right {
+  text-align: right;
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -912,11 +940,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-bold {
   font-weight: 700;
 }
-.font-medium {
-  font-weight: 500;
-}
 .font-normal {
   font-weight: 400;
+}
+.font-medium {
+  font-weight: 500;
 }
 .uppercase {
   text-transform: uppercase;
