--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -52,8 +52,12 @@
         background: rgba(0,0,0,.70);
     }
 
+
     .alert-container{
-        @apply w-full h-full bg-transparent fixed top-0 right-0 p-5;
+        @apply w-full h-full fixed top-0 right-0 p-5;
+        @apply h-full w-full absolute left-0 top-0 flex flex-col justify-center items-center;
+        background: rgba(0,0,0,.70);
+        z-index: 999999999;
     }
 
     .alert{
